--- a/stringExercises.ipynb
+++ b/stringExercises.ipynb
@@ -26,27 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this function takes a string as a parameter and returns \n",
     "def reverseWord(word):\n",
-    "    #add your code here\n",
-    "    \n",
+    "    word = [letter for letter in word]\n",
+    "    word = \"\".join(word[::-1])\n",
     "    return word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "olleh\n"
      ]
     }
    ],
@@ -65,27 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this function returns the number of characters in a string\n",
     "def countChars(word):\n",
-    "    #add your code here\n",
-    "    \n",
-    "    return 0"
+    "    C = [i for i in word]\n",
+    "    return len(C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "19\n"
      ]
     }
    ],
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,22 +111,22 @@
     "# for example: findReplace(\"hello world\", \"o\", \"*\") -> \"hell* w*rld\"\n",
     "#  or: findReplace(\"hello world\", \"a\", \"b\") -> \"hello world\" since no \"a\" was found in the string word\n",
     "def findReplace(word, find, replace):\n",
-    "    #write your code here\n",
-    "    newWord = \"\"\n",
+    "    newWord =[replace if item == find else item for item in word]\n",
+    "    newWord = \"\".join(newWord)\n",
     "    return newWord"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n"
+      "hell* w*rld\n",
+      "hello world\n"
      ]
     }
    ],
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,21 +155,21 @@
     "# eg countThisChar(\"ada college\", \"l\") -> 2\n",
     "# eg countThisChar(\"ada college\", \"b\") -> 0\n",
     "def countThisChar(word, char):\n",
-    "    \n",
-    "    return -1"
+    "    count = len([item for item in word if item == char])\n",
+    "    return count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n",
-      "-1\n"
+      "2\n",
+      "0\n"
      ]
     }
    ],
@@ -193,28 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "ERROR: reverseWord",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-6376a2cd9353>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mreverseWord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"fred\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"derf\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ERROR: reverseWord\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: ERROR: reverseWord"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert reverseWord(\"fred\") == \"derf\", \"ERROR: reverseWord\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,12 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert countThisChar(\"ada college\", \"b\") == 0, \"ERROR: countThisChar\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
